--- a/inside_minds.html
+++ b/inside_minds.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link href="style.css" type="text/css" rel="stylesheet"/>
+    </head>
     <body>
         <h1>Inside Minds</h1>
         <p> This company is created to develop the whole world to another level.
@@ -7,7 +10,7 @@
             it is created to listen and see what the coustomers have in there minds.
             That way we can <br>connect to the right people to get their idea developed
             and brought to life.If we cutivate our ideas to a good purpose<br> we can achieve
-            anything that is our ideology in our environmnet.</p>
+            anything that is our ideology in our environmnet.
             <br>
             <br>
             The most important thing in our company is to reach out to the society 
@@ -17,7 +20,7 @@
             we will be able to understand the core concept<br> of that idea that way we can connect
             the person to the right people that can implment the idea to the ground. That <br>way we 
             can all contribute to have a better society a better enviroment which can lead to a better
-            world.<br> 
+            world.<br> </p>
             <br>
             <a href="https://idea.davison.com/?source_id=1569&campaign_name=ideas%2520to%2520store&gclid=Cj0KCQiA-aGCBhCwARIsAHDl5x_We1wqwi4O5ctu28Wb0W-DwlgWs0O1wQsKbOZDgbErmZeC41UIZP0aAuSfEALw_wcB">Bring Your Idea To life</a>
     </body>
