--- a/aboutme.html
+++ b/aboutme.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <div>
     <h1 style="text-align: center;"> About Indrias Berassa</h1>
     <hr>
     <p style="font-family: 'courier New' , Courier, monospace;">
@@ -54,6 +55,7 @@
             " alt="Valid CSS!" /></a>
             </p>
         </footer>
+    </div>
 </body>
 
 </html>
