--- a/Tip Calculator_files/Tip Calculator.html
+++ b/Tip Calculator_files/Tip Calculator.html
@@ -13,7 +13,7 @@
 
 	<body>
 		<h1>
-			<img id="logo" src="./Tip Calculator_files/calc.jpg" alt="++--**//">
+			<img id="logo" src=".Iberassa.github.io/Tip Calculator_files/calc.jpg" alt="++--**//">
 			  Tip Calculator
 		</h1>
 
